--- a/moxy/upstream.templ
+++ b/moxy/upstream.templ
@@ -4,16 +4,28 @@
 
 {% templ UpstreamUrlTemplate(c *config.Config, id string, url string) %}
     <form action={%= c.MoxyPath + "/url" %} method="PUT">
-        <input name="id" value={%= id %} size="50" hidden="true" />
-        <input name="url" value={%= url %} size="50" />
-        <button type="submit">{%= "Update" %}</button>
+        <input name="id" value={%= id %} hidden="true" />
+        <div class="row">
+            <div class="two-thirds column">
+                <input type="url" name="url" value={%= url %} />
+            </div>
+            <div class="one-third column">
+                <button class="button-primary" type="submit">{%= "Update" %}</button>
+            </div>
+        </div>
     </form>
 {% endtempl %}
 
 {% templ UpstreamPathPrefixTemplate(c *config.Config, id string, pathprefix string) %}
     <form action={%= c.MoxyPath + "/pathprefix" %} method="PUT">
-        <input name="id" value={%= id %} size="50" hidden="true" />
-        <input name="path" value={%= pathprefix %} size="50" />
-        <button type="submit">{%= "Update" %}</button>
+        <input name="id" value={%= id %} hidden="true" />
+        <div class="row">
+            <div class="two-thirds column">
+                <input type="url" name="path" value={%= pathprefix %} />
+            </div>
+            <div class="one-third column">
+                <button class="button-primary" type="submit">{%= "Update" %}</button>
+            </div>
+        </div>
     </form>
 {% endtempl %}
