--- a/moxy/upstream.templ
+++ b/moxy/upstream.templ
@@ -21,7 +21,7 @@
         <input name="id" value={%= id %} hidden="true" />
         <div class="row">
             <div class="two-thirds column">
-                <input type="url" name="path" value={%= pathprefix %} />
+                <input type="text" name="path" value={%= pathprefix %} />
             </div>
             <div class="one-third column">
                 <button class="button-primary" type="submit">{%= "Update" %}</button>
