--- a/moxy/home.templ
+++ b/moxy/home.templ
@@ -1,13 +1,16 @@
 {% package moxy %}
 
 {% import "github.com/joe-davidson1802/turbo-templ/turbo" %}
+{% import "github.com/joe-davidson1802/moxy/config" %}
 
-{% templ HomeTemplate() %}
+{% templ HomeTemplate(c *config.Config) %}
 <html>
     <head>
         <title>{%= "Moxy - Admin Portal" %}</title>
         <script type="module">{%! Raw("import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo';") %}</script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href={%= c.MoxyPath+"/css/skeleton.css" %} />
+        <link rel="stylesheet" href={%= c.MoxyPath+"/css/normalize.css" %} />
+        <link rel="stylesheet" href={%= c.MoxyPath+"/css/styles.css" %} />
     </head>
     <body>
         <div class="container">
