Fix moxy config

--- a/moxy/home.templ
+++ b/moxy/home.templ
@@ -17,7 +17,7 @@
             <section class="header">
                 <h1 class="title">{%= "Moxy" %}</h1>
             </section>
-            {%! turbo.TurboFrame(turbo.TurboFrameOptions{Id: "moxy-config", Src: "/moxy/config"}) %}
+            {%! turbo.TurboFrame(turbo.TurboFrameOptions{Id: "moxy-config", Src:  c.MoxyPath+"/config"}) %}
         </div>
     </body>
 </html>
